--- a/css/style.css
+++ b/css/style.css
@@ -131,3 +131,19 @@ body {
 .highlight {
   color: var(--highlight-color);
 }
+/* banner css end */
+.partners{
+  padding: 0px 40px;
+}
+.partner{
+  max-width:970px;
+  height:116px;
+  background: white;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  border-radius:100px;
+  /* display: flex;
+  align-items: center;
+  justify-content: space-around; */
+  
+}
