--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,10 +13,14 @@
     text-align: center;
     transform: translateY(-500px);
     transition: 0.3s;
+    background: #2d3436;
   }
   .navigation li {
     display: block;
     padding: 10px 0px;
+  }
+  .navigation li a {
+    color: #fff;
   }
   .bolet::before {
     width: 5px;
@@ -38,5 +42,14 @@
     font-weight: 800;
     color: var(--heading-color);
     line-height: 104px;
+  }
+  .col-5 {
+    grid-template-columns: 1fr;
+  }
+  .partner {
+    width: 100% !important;
+    height: 100% !important;
+    border-radius: 10px;
+    padding: 20px 0px;
   }
 }
