--- a/css/responsive.css
+++ b/css/responsive.css
@@ -30,9 +30,12 @@
   #toggle-menu:checked ~ .navigation {
     transform: translateY(0px);
   }
-  .col-3{
-    grid-template-columns: repeat(2,1fr);
+  .col-3 {
+    grid-template-columns: repeat(2, 1fr);
     grid-row-gap: 10px;
+  }
+  .col-2 {
+    grid-template-columns: 1fr;
   }
 }
 @media (max-width: 700px) {
@@ -48,7 +51,8 @@
     line-height: 60px;
   }
   .col-5,
-  .col-3 {
+  .col-3,
+  .col-2 {
     grid-template-columns: 1fr;
     grid-row-gap: 10px;
   }
@@ -58,9 +62,22 @@
     border-radius: 10px;
     padding: 20px 0px;
   }
-  .section-title h2{
+  .section-title h2 {
     font-size: 40px;
     line-height: 56px;
     margin-bottom: 10px;
+  }
+}
+@media (max-width: 464px) {
+  .feature-head h2 {
+    font-size: 36px;
+    line-height: 80px;
+    letter-spacing: -2px;
+  }
+  .feature-main {
+    padding: 10px 0px;
+  }
+  .feature-main-text h4{
+    line-height: 27px;
   }
 }
