--- a/css/style.css
+++ b/css/style.css
@@ -167,15 +167,15 @@ body {
 .class-card {
   text-align: center;
   margin-top: 55px;
-  background:rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.5);
   max-width: 320px;
   height: 450px;
   border-radius: 20px;
-  transition: .3s;
+  transition: 0.3s;
 }
-.class-card:hover{
- transform: translateY(-5px);
- background:rgba(255, 255, 255, 1);
+.class-card:hover {
+  transform: translateY(-5px);
+  background: rgba(255, 255, 255, 1);
 }
 .card-img {
   width: 120px;
@@ -214,4 +214,63 @@ body {
   background: var(--highlight-color);
   color: white;
   cursor: pointer;
+}
+/* classes section end */
+#feature {
+  margin-top: 75px;
+}
+.feature-container {
+   padding: 0px 40px;
+}
+.feature-head h2 {
+  font-size: 59px;
+  line-height: 104px;
+  letter-spacing: -3px;
+  font-weight: 700;
+  color: var(--main-color);
+}
+.feature-head p {
+  line-height: 26px;
+  color: rgba(45, 52, 54, 1);
+  font-weight: 400;
+}
+.feature-main {
+  max-width: 510px;
+  height: 98px;
+  background: rgba(255, 255, 255, 0.8);
+  margin-top: 20px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.feature-main-img {
+  margin-left: 16px;
+  margin-right: 10px;
+  max-width: 60px;
+  height: 60px;
+}
+.feature-main-img img {
+  width: 100%;
+  height: 100%;
+}
+.feature-img {
+  max-width: 602px;
+  height: 479px;
+  margin-top: 26px;
+}
+.feature-img img {
+  width: 100%;
+  height: 100%;
+}
+.feature-main-text h4 {
+  font-size: 20px;
+  color: rgba(87, 95, 98, 1);
+  font-weight: 600;
+  line-height: 46px;
+}
+.feature-main-text p{
+  color: rgba(114, 119, 120, 1);
+  font-size: 14px;
+  font-weight: 400;
 }
