--- a/css/responsive.css
+++ b/css/responsive.css
@@ -56,6 +56,20 @@
     grid-template-columns: 1fr;
     grid-row-gap: 10px;
   }
+  .category-container {
+    flex-direction: column;
+    height: 100%;
+  }
+  .single-category {
+    margin-bottom: 14px;
+    margin-top: 14px;
+  }
+  .c-2 {
+    margin-left: 14px;
+  }
+  .c-3 {
+    margin-right: 10px;
+  }
   .partner {
     width: 100% !important;
     height: 100% !important;
@@ -77,7 +91,7 @@
   .feature-main {
     padding: 10px 0px;
   }
-  .feature-main-text h4{
+  .feature-main-text h4 {
     line-height: 27px;
   }
 }
