--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,7 @@ body {
   margin-top: 75px;
 }
 .feature-container {
-   padding: 0px 40px;
+  padding: 0px 40px;
 }
 .feature-head h2 {
   font-size: 59px;
@@ -244,7 +244,8 @@ body {
   align-items: center;
   justify-content: center;
 }
-.feature-main-img {
+.feature-main-img,
+.category-img {
   margin-left: 16px;
   margin-right: 10px;
   max-width: 60px;
@@ -269,8 +270,38 @@ body {
   font-weight: 600;
   line-height: 46px;
 }
-.feature-main-text p{
+.feature-main-text,
+.single-category p {
   color: rgba(114, 119, 120, 1);
   font-size: 14px;
   font-weight: 400;
+}
+/* feature css end */
+#category {
+  margin-top: 80px;
+  margin-bottom: 30px;
+  padding: 0px 30px;
+}
+.category-container {
+  background: rgba(255, 255, 255, 1);
+  max-width: 1170px;
+  height: 150px;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.single-category {
+  display: flex;
+  align-items: center;
+}
+.single-category h4 {
+  font-size: 20px;
+  line-height: 30px;
+  color: var(--main-color);
+  font-weight: 700;
+}
+.category-img img {
+  width: 100%;
+  height: 100%;
 }
