--- a/css/style.css
+++ b/css/style.css
@@ -305,3 +305,71 @@ body {
   width: 100%;
   height: 100%;
 }
+/* category css end */
+.certificate {
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 20px;
+  padding: 0px 40px;
+}
+.certificate-left h2 {
+  font-size: 54px;
+  line-height: 104px;
+  color: var(--main-color);
+  font-weight: 700;
+}
+.certificate-left p {
+  font-size: 16px;
+  line-height: 26px;
+  color: rgba(71, 60, 58, 1);
+  font-weight: 400;
+  margin-bottom: 40px;
+}
+.certificate-image img {
+  width: 100%;
+  height: 100%;
+}
+/* certificate css end */
+.search-box {
+  margin-top: 55px;
+  margin-bottom: 55px;
+  padding: 0px 40px;
+}
+.search-box form {
+  max-width: 970px;
+  height: 116px;
+  margin: 0 auto;
+  background: rgba(255, 255, 255, 1);
+  border-radius: 10px;
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 16px 32px;
+  flex-wrap: wrap;
+}
+.search-box form input{
+  border: none;
+  height: 26px;
+  width: 317px;
+  padding: 0px 20px;
+  outline: none;
+  font-size: 14px;
+}
+input::placeholder{
+  color: #DCDCDC;
+}
+.search-box form i{
+  color: #DCDCDC;
+}
+.search-box button{
+  background: rgba(254, 60, 94, 1);
+  border: 0;
+  color: white;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 16px 35px;
+  border-radius: 10px;
+  cursor: pointer;
+  outline: none;
+}
