--- a/css/responsive.css
+++ b/css/responsive.css
@@ -35,8 +35,15 @@
     grid-row-gap: 10px;
   }
   .col-2,
-  .certificate {
+  .certificate,
+  .footer-container {
     grid-template-columns: 1fr;
+  }
+  .col-left {
+    text-align: center;
+  }
+  .logo {
+    margin: 0px auto;
   }
 }
 @media (max-width: 700px) {
@@ -82,6 +89,20 @@
     line-height: 56px;
     margin-bottom: 10px;
   }
+  .logo {
+    margin: 0px;
+  }
+  .paragraph {
+    margin-top: 20px;
+    text-align: left;
+  }
+  .col p {
+    font-size: 12px;
+  }
+  .social-link h4 {
+    margin-right: 12px;
+    font-size: 17px;
+  }
 }
 @media (max-width: 464px) {
   .feature-head h2 {
@@ -109,5 +130,33 @@
   .search-box form input {
     height: 20px;
     width: 164px;
+  }
+  .social-link img {
+    width: 28px;
+    height: 28px;
+    margin-right: 4px;
+  }
+  .social-link h4 {
+    margin-right: 12px;
+    font-size: 16px;
+  }
+  .form-control input {
+    max-width: 101px;
+    margin-right: 9px;
+  }
+  textarea {
+    max-width: 140px;
+  }
+}
+@media (max-width: 320px) {
+  .social-link img {
+    margin-right: 0px;
+  }
+  .form-control input {
+    max-width: 98px;
+    margin-right: 1px;
+  }
+  textarea {
+    max-width: 122px;
   }
 }
