--- a/css/style.css
+++ b/css/style.css
@@ -452,7 +452,7 @@ textarea::placeholder {
 }
 .row {
   margin-top: 50px;
-  display:flex;
+  display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
@@ -462,12 +462,13 @@ textarea::placeholder {
   font-weight: 400;
   color: #2d3436;
 }
-.copyright{
+.copyright {
   margin-top: 20px;
   text-align: center;
   padding: 0px 40px;
 }
-.copyright p{
+.copyright p {
   margin-top: 10px;
   font-weight: 600;
+  color: #2d3436;
 }
